--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -184,10 +184,10 @@
                 <div id="card-4" class="card-text">texts changed in scripts.js</div>
             </div>
 
-        
-
-        <!--MESSAGE-BOX -->
+        <!-- pre-footer (messages) wrapper-->
         <div class="msgbox-wrapper">
+
+             <!--MESSAGE-BOX -->
             <div class="form-container">
                 <form class="form" action="https://formsubmit.co/84650f89c803d4646b0d3490539ffc29" method="POST">
                     <input type="hidden" name="_next" value="https://tarsogalvao.ddns.net/cv/thanks.html">
@@ -200,7 +200,7 @@
                     <button class="form-btn" type="submit">texts changed in scripts.js</button>
                 </form>
             </div>
-
+            <!-- message icon -->
             <div class="form-container">
                 <lottie-player class="card-icon" src="img/working.json" background="transparent" speed="1" loop autoplay></lottie-player>
             </div>          
