added height / width to images on html out of css

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -56,62 +56,62 @@
             </div>
 
             <!-- Header main image + name text-->
-            <img class="header-image" src="img/me.gif" type="image/gif">
+            <img class="header-image" width="267px" height="320px" src="img/me.gif" type="image/gif">
             <h1>Tarso Galvão</h1>
             <!-- job description -->
             <h3 id="ht">texts changed in scripts.js</h3>
             <!-- rocket -->
-            <a id="rocket"><img src="img/rocket.webp" type="image/webp" id="Rocket"></a>
+            <a id="rocket"><img src="img/rocket.webp" width="40px" height="40px" type="image/webp" id="Rocket"></a>
 
             <!-- icons display -->
             <div class="row">
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="HTML 5" src="img/icons/html5-original-wordmark.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="HTML 5" src="img/icons/html5-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="CSS 3" src="img/icons/css3-original-wordmark.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="CSS 3" src="img/icons/css3-original-wordmark.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Bootstrap" src="img/icons/bootstrap-original-wordmark.svg" />    
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Bootstrap" src="img/icons/bootstrap-original-wordmark.svg" />    
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Javascript" src="img/icons/javascript-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Javascript" src="img/icons/javascript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Typescript" src="img/icons/typescript-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Typescript" src="img/icons/typescript-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Node.js" src="img/icons/nodejs-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Node.js" src="img/icons/nodejs-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="React.js" src="img/icons/react-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="React.js" src="img/icons/react-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Java" src="img/icons/java-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Java" src="img/icons/java-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Python" src="img/icons/python-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Python" src="img/icons/python-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Flask" src="img/icons/flask-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Flask" src="img/icons/flask-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Django" src="img/icons/django-plain.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Django" src="img/icons/django-plain.svg" />
                 </div>          
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Godot Engine" src="img/icons/godot-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Godot Engine" src="img/icons/godot-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Born Again Shell" src="img/icons/bash-original.svg" /> 
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Born Again Shell" src="img/icons/bash-original.svg" /> 
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Debian Linux" src="img/icons/linux-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Debian Linux" src="img/icons/linux-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Raspberry Pi" src="img/icons/raspberrypi-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Raspberry Pi" src="img/icons/raspberrypi-original.svg" />
                 </div>
                 <div class="column">
-                    <img class="icons" type="image/svg+xml" title="Git/Github" src="img/icons/git-original.svg" />
+                    <img class="icons" type="image/svg+xml" width="35px" height="35px" title="Git/Github" src="img/icons/git-original.svg" />
                 </div>
             </div>
 
@@ -128,7 +128,7 @@
                     <div class="card-0 card-all">
                         <div class="card-iframe">
                             <div>
-                                <iframe id="iFrame" src="api/api.html?surtarso" scrolling="no"></iframe>
+                                <iframe id="iFrame" loading="lazy" src="api/api.html?surtarso" scrolling="no"></iframe>
                             </div>
                         </div>
                     </div>
@@ -214,9 +214,9 @@
         </footer>
 
         <!-- mode and language buttons toggler, rocket control -->
-        <script type="text/javascript" src="src/js/scripts.js" nonce="rAnd0m123"></script>
+        <script async type="text/javascript" src="src/js/scripts.js" nonce="rAnd0m123"></script>
         <!-- cards animated figures (json player)-->
-        <script type="text/javascript" src="src/js/lottie-player.js" nonce="rAnd0m123"></script>
+        <script defer type="text/javascript" src="src/js/lottie-player.js" nonce="rAnd0m123"></script>
         <!-- canvas -->
         <!-- <script type="text/javascript" src="src/js/canvas.js" nonce="rAnd0m123"></script> -->
     </body>
