converted gif to webm

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -55,8 +55,8 @@
                 </div>
             </div>
 
-            <!-- Header main image + name text-->
-            <img class="header-image" width="267px" height="320px" src="img/me.gif" type="image/gif">
+            <!-- Header main image + name text-->            
+            <video class="header-image" width="267px" height="320px" src="img/me.webm" type="video/webm" autoplay loop></video>
             <h1>Tarso Galvão</h1>
             <!-- job description -->
             <h3 id="ht">texts changed in scripts.js</h3>
