--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -56,7 +56,7 @@
             </div>
 
             <!-- Header main image + name text-->            
-            <video class="header-image" width="267px" height="320px" src="img/me.webm" type="video/webm" autoplay loop></video>
+            <video playsinline autoplay muted loop class="header-image" width="267px" height="320px" src="img/me.webm" type="video/webm" preload="auto"></video>
             <h1>Tarso Galvão</h1>
             <!-- job description -->
             <h3 id="ht">texts changed in scripts.js</h3>
