added blank target to cvs

--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -35,7 +35,7 @@
                         <nav class="menu-items">
                             <ul>
                                 <li>
-                                    <a id="cv">texts changed in scripts.js (Curriculum)</a>
+                                    <a id="cv" target="_blank">texts changed in scripts.js (Curriculum)</a>
                                 </li>
                                 <li>
                                     <a href="https://www.linkedin.com/in/tarsogalvao" target="_blank">Linkedin</a>
@@ -55,7 +55,7 @@
                 </div>
             </div>
 
-            <!-- Header main image + name text-->            
+            <!-- Header main image + name text-->           
             <video muted autoplay playsinline loop class="header-image" width="267px" height="320px" src="img/me.webm" type="video/webm" type="video/webm; codecs='vp9, opus'" preload="auto"></video>
             <h1>Tarso Galvão</h1>
             <!-- job description -->
