--- a/My Landing Page/index.html
+++ b/My Landing Page/index.html
@@ -218,6 +218,6 @@
         <!-- cards animated figures (json player)-->
         <script defer type="text/javascript" src="src/js/lottie-player.js" nonce="rAnd0m123"></script>
         <!-- canvas -->
-        <!-- <script type="text/javascript" src="src/js/canvas.js" nonce="rAnd0m123"></script> -->
+        <script type="text/javascript" src="src/js/canvas.js" nonce="rAnd0m123"></script>
     </body>
 </html>
