fixed links, need reverse proxy for ports

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -44,20 +44,20 @@
                                                 <!-- this is where the services will be listed -->
                                             <tr>
                                                 <!-- O!MPD -->
-                                                <td><a id="ompd_link" href="#"
+                                                <td><a id="OMPD_link" href="#"
                                                     class="label label-default">loading</a></td>
-                                                <td><span id="ompd" class="label label-warning">Waiting</span></td>  
+                                                <td><span id="OMPD" class="label label-warning">Waiting</span></td>  
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity -->
-                                                <td><a id="ubooquity_link" href="#"
+                                                <td><a id="Ubooquity_link" href="#"
                                                     class="label label-default">loading</a></td>
-                                                <td><span id="ubooquity" class="label label-warning">Waiting</span></td>
+                                                <td><span id="Ubooquity" class="label label-warning">Waiting</span></td>
                                             <tr>
                                                 <!-- ownCloud -->
-                                                <td><a id="owncloud_link" href="#"
+                                                <td><a id="ownCloud_link" href="#"
                                                     class="label label-default">loading</a></td>
-                                                <td><span id="owncloud" class="label label-warning">Waiting</span></td>
+                                                <td><span id="ownCloud" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             
                                         </tbody>
