--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="page-header">
-                    <h1>SurServer <small>Dashboard</small></h1>
+                    <h1>SurServer <small>Service Control Dashboard</small></h1>
                 </div>
             </div>
         </div>
@@ -23,11 +23,12 @@
     <!-- main content -->
     <!-- this is a dashboard that will show all current services on the server with links to them -->
     <div class="container">
+        <!-- start of USER SERVICES -->
         <div class="row">
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">Services</h3>
+                        <h3 class="panel-title">User Services</h3>
                     </div>
                     <div class="panel-body">
                         <div class="row">
@@ -37,29 +38,98 @@
                                         <thead>
                                             <tr>
                                                 <th>Service</th>
+                                                <th>Description</th>
                                                 <th>Status</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                                <!-- this is where the services will be listed -->
+                                                <!-- this is where the USER services will be listed -->
                                             <tr>
                                                 <!-- O!MPD -->
-                                                <td><a id="OMPD_link" href="#"
-                                                    class="label label-default">loading</a></td>
+                                                <td><a id="OMPD_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Music Player Daemon</td>
                                                 <td><span id="OMPD" class="label label-warning">Waiting</span></td>  
                                             </tr>
                                             <tr>
                                                 <!-- Ubooquity -->
-                                                <td><a id="Ubooquity_link" href="#"
-                                                    class="label label-default">loading</a></td>
+                                                <td><a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Books Library</td>
                                                 <td><span id="Ubooquity" class="label label-warning">Waiting</span></td>
+                                            </tr>
                                             <tr>
                                                 <!-- ownCloud -->
-                                                <td><a id="ownCloud_link" href="#"
-                                                    class="label label-default">loading</a></td>
+                                                <td><a id="ownCloud_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Cloud Storage</td> 
                                                 <td><span id="ownCloud" class="label label-warning">Waiting</span></td>
                                             </tr>
+                                            <tr>
+                                                <!-- Wordpress -->
+                                                <td><a id="Wordpress_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Portfolio Site</td>
+                                                <td><span id="Wordpress" class="label label-warning">Waiting</span></td>
+                                            </tr>
                                             
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- start of ADMIN SERVICES -->
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Admin Services</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-bordered table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>Service</th>
+                                                <th>Description</th>
+                                                <th>Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                                <!-- this is where the ADMIN services will be listed -->
+                                            <tr>
+                                                <!-- Dashboard -->
+                                                <td><a id="Dashboard_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Server Dashboard</td>
+                                                <td><span id="Dashboard" class="label label-warning">Waiting</span></td>  
+                                            </tr>
+                                            <tr>
+                                                <!-- Pi-Hole -->
+                                                <td><a id="Pi-Hole_link" href="#" class="label label-default">loading</a></td>
+                                                <td>DNS Server</td>
+                                                <td><span id="Pi-Hole" class="label label-warning">Waiting</span></td>
+                                            </tr>
+                                            <tr>
+                                                <!-- Wordpress Admin -->
+                                                <td><a id="Wordpress-Admin_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Wordpress Admin</td>
+                                                <td><span id="Wordpress-Admin" class="label label-warning">Waiting</span></td>
+                                            </tr>
+                                            <tr>
+                                                <!-- Ubooquity Admin -->
+                                                <td><a id="Ubooquity-Admin_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Books Library Admin</td>
+                                                <td><span id="Ubooquity-Admin" class="label label-warning">Waiting</span></td>
+                                            </tr>
+                                            <tr>
+                                                <!-- Bitwarden -->
+                                                <td><a id="Bitwarden_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Password Manager</td>
+                                                <td><span id="Bitwarden" class="label label-warning">Waiting</span></td>
+                                            </tr>
+
                                         </tbody>
                                     </table>
                                 </div>
@@ -77,7 +147,7 @@
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <p>Copyright &copy; 2022 SurServer - All rights reserved.</p>
+                        <p>Copyright &copy; 2022 Tarso Galvão - All rights reserved.</p>
                     </div>
                 </div>
             </div>
