added sample pics for quicklinks

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -24,6 +24,44 @@
         </div>
     </div>
     <!-- end of header -->
+
+    <!-- add quick links menu with 4 evenly spaced images side by side, as url for ompd, ubooquity, owncloud and wordpress-->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Quick Links</h3>
+                    </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <a id="OMPD_quicklink" href="#">                                    
+                                    <img src="img/ompd.png" alt="OMPD" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-3">
+                                <a id="Ubooquity_quicklink" href="#">
+                                    <img src="img/ubooquity.png" alt="Ubooquity" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-3">
+                                <a id="ownCloud_quicklink" href="#">
+                                    <img src="img/owncloud.png" alt="Owncloud" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-3">
+                                <a id="Wordpress_quicklink" href="#">
+                                    <img src="img/wordpress.png" alt="Wordpress" class="img-responsive">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- main content -->
     <!-- this is a dashboard that will show all current services on the server with links to them -->
     <div class="container">
