changed icons for cdn links

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -36,23 +36,32 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-md-3">
-                                <a id="OMPD_quicklink" href="#">                                    
-                                    <img src="img/ompd.png" alt="OMPD" class="img-responsive">
+                                <a id="OMPD_quicklink" href="#">
+                                    <i class="fa-brands fa-wordpress-simple"></i>
+                                    <img src="https://img.icons8.com/fluency/240/000000/music-library.png"
+                                    alt="OMPD" class="img-responsive">
+                                    <p class="text-center" >Music</p>
                                 </a>
                             </div>
                             <div class="col-md-3">
                                 <a id="Ubooquity_quicklink" href="#">
-                                    <img src="img/ubooquity.png" alt="Ubooquity" class="img-responsive">
+                                    <img src="https://img.icons8.com/external-flaticons-flat-flat-icons/240/000000/external-books-lifestyles-flaticons-flat-flat-icons-2.png"
+                                    alt="Ubooquity" class="img-responsive">
+                                    <p class="text-center" >Books</p>
                                 </a>
                             </div>
                             <div class="col-md-3">
                                 <a id="ownCloud_quicklink" href="#">
-                                    <img src="img/owncloud.png" alt="Owncloud" class="img-responsive">
+                                    <img src="https://img.icons8.com/fluency/240/000000/cloud-backup-restore.png"
+                                    alt="Owncloud" class="img-responsive">
+                                    <p class="text-center" >Backup</p>
                                 </a>
                             </div>
                             <div class="col-md-3">
                                 <a id="Wordpress_quicklink" href="#">
-                                    <img src="img/wordpress.png" alt="Wordpress" class="img-responsive">
+                                    <img src="https://img.icons8.com/color/240/000000/wordpress.png"
+                                    alt="Wordpress" class="img-responsive">
+                                    <p class="text-center" >Blog</p>
                                 </a>
                             </div>
                         </div>
