switched to future link

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -58,12 +58,11 @@
                                 </a>
                             </div>
                             <div class="col-md-3">
-                                <a id="Wordpress_quicklink" href="#">
-                                    <img src="https://img.icons8.com/color/240/000000/wordpress.png"
-                                    alt="Wordpress" class="img-responsive">
-                                    <p class="text-center" >Blog</p>
+                                <a id="Photos_quicklink" href="#">
+                                    <img src="https://img.icons8.com/fluency/240/000000/photos.png"
+                                    alt="Photos" class="img-responsive">
+                                    <p class="text-center" >Photos</p>
                                 </a>
-                            </div>
                         </div>
                     </div>
                 </div>
