comments and clean-up

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="Access-Control-Allow-Origin" content="*">
-        <meta http-equiv="Access-Control-Allow-Methods" content="*">
-        <meta http-equiv="Access-Control-Allow-Headers" content="*">
-        <meta http-equiv="Access-Control-Expose-Headers" content="*">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home - Dashboard</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"> -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.3/css/AdminLTE.min.css"> -->
-        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/admin-lte/2.4.3/css/skins/_all-skins.min.css"> -->
     </head>
 <body>
     <!-- header with SurServer as name -->
@@ -73,6 +65,7 @@
             </div>
         </div>
     </div>
+    <!-- end of quick links menu -->
 
     <!-- main content -->
     <!-- this is a dashboard that will show all current services on the server with links to them -->
@@ -132,6 +125,8 @@
                 </div>
             </div>
         </div>
+        <!-- end of USER SERVICES -->
+
         <!-- start of ADMIN SERVICES -->
         <div class="row">
             <div class="col-md-12">
@@ -194,7 +189,9 @@
             </div>
         </div>
     </div>
+    <!-- end of ADMIN services -->
     <!-- end of main content -->
+
     <!-- footer -->
     <div class="container">
         <div class="row">
@@ -210,10 +207,6 @@
     <!-- end of footer -->
     
 </body>
-<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script> -->
 <script src="index.js" type="text/javascript" charset="utf-8"></script>
 </html>
