added more services, fixed some reverse proxys

--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="Access-Control-Allow-Origin" content="*">
         <title>Home - Dashboard</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
@@ -100,7 +101,7 @@
                                             <tr>
                                                 <!-- Ubooquity -->
                                                 <td><a id="Ubooquity_link" href="#" class="label label-default">loading</a></td>
-                                                <td>Books Library</td>
+                                                <td>Book Shelf</td>
                                                 <td><span id="Ubooquity" class="label label-warning">Waiting</span></td>
                                             </tr>
                                             <tr>
@@ -178,7 +179,24 @@
                                                 <td>Password Manager</td>
                                                 <td><span id="Bitwarden" class="label label-warning">Waiting</span></td>
                                             </tr>
-
+                                            <tr>
+                                                <!-- Lidarr -->
+                                                <td><a id="Lidarr_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Music Library</td>
+                                                <td><span id="Lidarr" class="label label-warning">Waiting</span></td>
+                                            </tr>
+                                            <tr>
+                                                <!-- Radarr -->
+                                                <td><a id="Readarr_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Book Library</td>
+                                                <td><span id="Readarr" class="label label-warning">Waiting</span></td>
+                                            </tr>
+                                            <tr>
+                                                <!-- Jackett -->
+                                                <td><a id="Jackett_link" href="#" class="label label-default">loading</a></td>
+                                                <td>Torrent Search Indexer</td>
+                                                <td><span id="Jackett" class="label label-warning">Waiting</span></td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
