--- a/home_dash/index.html
+++ b/home_dash/index.html
@@ -225,6 +225,6 @@
     <!-- end of footer -->
     
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" crossorigin="anonymous" type="text/javascript"></script>
 <script src="index.js" type="text/javascript" charset="utf-8"></script>
 </html>
